--- a/twitter/public/index.html
+++ b/twitter/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: rgb(255, 255, 255); height: 100%; margin: 0; display: block;">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" style="height: 100%"></div>
     <!--
